2003-11-22 Craig Franklin <craigfranklin@comcast.net>
  * gputils 0.11.8 Released.
  * Added new processors: 16f54, 16f57, 16f688
  * Updated header files and linker scripts.
  * Updated libiberty from upstream sources.
  * Changed gpasm 18xx banksel from movlb relocation to banksel relocation.
  * Changed gplink movlb relocation to use the upper byte of symbol address.

2003-10-21 Craig Franklin <craigfranklin@comcast.net>
  * Fixed string to long conversion in gpasm so 32 bit numbers
    could be used.

2003-10-19 Craig Franklin <craigfranklin@comcast.net>
  * Updated documentation.

2003-10-18 Craig Franklin <craigfranklin@comcast.net>
  * Fixed a bug in 16xx special instruction mnemonics that could cause
    an incorrect branch calculation if a goto proceded the mnemonic.

2003-10-17 Craig Franklin <craigfranklin@comcast.net>
  * gputils 0.11.7 Released.

2003-10-09 Craig Franklin <craigfranklin@comcast.net>
  * Allow gplink to parse linker scripts with missing newlines before the 
    EOF.

2003-10-08 Craig Franklin <craigfranklin@comcast.net>
  * Fixed an initialization problem that causes a segfault when the first
    line has a parse error.

2003-10-03 Craig Franklin <craigfranklin@comcast.net>
  * Added 18xx config and idlocs sections to gpasm coff outputs.
  * Cleaned up gplink script error reporting.

2003-09-28 Craig Franklin <craigfranklin@comcast.net>
  * Fixed gplink bug in 18xx absolute sections.
  * Fixed gplink memory allocation bug in 18xx devices.

2003-08-08 Craig Franklin <craigfranklin@comcast.net>
  * Fixed bug that could cause problems with comments on include directives.

2003-08-01 Craig Franklin <craigfranklin@comcast.net>
  * gputils 0.11.6 Released.
  * Added support for idata sections in gplink.
  * Changed extension of gplink object output from ".out" to ".cof"

2003-07-23 Craig Franklin <craigfranklin@comcast.net>
  * Fixed bsr boundary location for 18f248, 18f258,18f448, and 18f458.