@@ -1,3 +1,9 @@
+2003-11-23 Craig Franklin <craigfranklin@comcast.net>
+  * Fixed gpasm bug that caused the relocation to be omitted if the macro
+    argument is complex.
+  * Fixed gpasm bug that could cause symbol offsets in relocations to be
+    calculated incorrectly.
+
 2003-11-22 Craig Franklin <craigfranklin@comcast.net>
   * gputils 0.11.8 Released.
   * Added new processors: 16f54, 16f57, 16f688
